<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Readhub</string>
    <string name="app_slogan">科技新闻，每天 3 分钟</string>

    <string name="press_back_again_to_exit">再按一次退出</string>

    <string name="back_to_top_and_refresh">回到顶部并刷新</string>
    <string name="load_more_finished">已经到底啦</string>
    <string name="load_more_failed">加载失败，点击重试</string>

    <string name="open_in_browser">在浏览器中打开</string>
    <string name="share">分享</string>

    <string name="visit_official_web">访问 Web 端</string>
    <string name="share_to_friends">分享给朋友</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>

    <string name="tab_topic">热门话题</string>
    <string name="tab_news">科技动态</string>
    <string name="tab_technews">开发者资讯</string>
    <string name="tab_block_chain_news">区块链快讯</string>

    <string name="site_name___author_name___time">%1$s / %2$s · %3$s</string>
    <string name="site_name___time">%1$s · %2$s</string>
    <string name="time___source_count">%1$s · %2$d个数据来源</string>

    <string name="article">文章</string>
    <string name="open_article_in_app">使用内置浏览器</string>
    <string name="open_article_in_app_summary">关闭后使用系统浏览器。如果系统安装了最新版本的 Chrome，建议关闭这个选项。</string>

    <string name="open_article_advice_message">检测到系统已经安装 Chrome。已禁用应用内置文章浏览器。打开文章时，请选择使用 Chrome 打开，可以显著提高加载速度。您也可以稍后在设置页面中修改这个设置。</string>
    <string name="ok">好的</string>

    <string name="current_version">当前版本</string>
    <string name="open_source_url">项目开源主页</string>
    <string name="open_source_url_content">https://github.com/TakWolf/Readhub-Android</string>
    <string name="official_home_page">官方主页</string>
    <string name="official_home_page_content">https://readhub.me</string>
    <string name="open_source_license">开放源代码许可</string>
    <string name="about_copyright">Copyright © 2017 NoCode</string>

</resources>
